# EdgeFEM

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  SPEC_TIME_DOMAIN.md  code_samples.md  mkdocs.yml  project_plan.md  project_review.md  pyproject.toml  requirements.md  requirements.txt  smoke.s2p  system_design_spec.md  waveguide_sparams.s2p
.github/workflows/: ci.yml  docs.yml  wheels.yml
cmake/: FindEigen3.cmake
docs/: VALIDATION_REPORT.md  index.md  installation.md  quickstart.md  validation.md
docs/api/: core.md  designs.md  plots.md
docs/tutorials/: patch_antenna.md  unit_cell.md  waveguide.md
edgefem_cad/: __init__.py  cli.py
edgefem_cad/export/: edgefem_case.py
edgefem_cad/io/: stl_obj.py
edgefem_cad/mesh/: generate.py
edgefem_cad/ops/: repair.py
edgefem_cad/sdk/: __init__.py  project.py
examples/: 01_waveguide_sparams.py  01_waveguide_sparams.s2p  02_frequency_sweep.py  02_frequency_sweep.s2p  03_unit_cell_floquet.py  README.md  coax_50ohm.geo  coax_50ohm.msh  cube_cavity.geo  cube_cavity.msh  dielectric_slab.geo  dielectric_slab.msh  make_mesh.sh  make_port_mesh.sh  make_waveguide_mesh.sh  mixed_cavity.geo  mixed_cavity.msh  patch_2p45_FR4.s1p  patch_antenna.geo  patch_antenna.msh  patch_antenna_design.py  patch_antenna_design_prompt.md  patch_antenna_pattern.csv  patch_design.json  patch_fullwave_sparams.csv  patch_sparams.csv  plot_waveguide_sparams.py  rect_waveguide.geo  rect_waveguide.msh  run_patch_fullwave.py  run_scalar_demo.sh  run_waveguide_demo.sh  sdk_demo.py  stacked_patch.s1p  stacked_patch_case_study.py  stacked_patch_report.txt  unit_cell.geo  unit_cell_demo.py  unit_cell_workflow.md  validate_stacked_patch.py  (+10 more)
include/edgefem/: bc.hpp  coupling.hpp  edge_basis.hpp  fem.hpp  maxwell.hpp  mesh.hpp  mesh_quality.hpp  periodic.hpp  solver.hpp  sweep.hpp
include/edgefem/array/: active_impedance.hpp  coupling_extract.hpp  embedded_pattern.hpp
include/edgefem/io/: array_export.hpp  json_export.hpp  touchstone.hpp  vtk_export.hpp
include/edgefem/materials/: dispersive.hpp
include/edgefem/mor/: vector_fit.hpp
include/edgefem/ports/: lumped_port.hpp  port_eigensolve.hpp  wave_port.hpp
include/edgefem/post/: huygens_surface.hpp  ntf.hpp
include/vectorem/: bc.hpp  coupling.hpp  edge_basis.hpp  fem.hpp  maxwell.hpp  mesh.hpp  mesh_quality.hpp  periodic.hpp  scalar_demo.hpp  solver.hpp  sweep.hpp
include/vectorem/array/: active_impedance.hpp  coupling_extract.hpp  embedded_pattern.hpp
include/vectorem/io/: array_export.hpp  json_export.hpp  touchstone.hpp
include/vectorem/materials/: dispersive.hpp
include/vectorem/mor/: vector_fit.hpp
include/vectorem/ports/: port_eigensolve.hpp  wave_port.hpp
include/vectorem/post/: ntf.hpp
papers/: README.md
papers/white_paper/: Makefile  bibliography.bib  edgefem_methodology.tex  generate_figures.py
papers/white_paper/figures/: .gitkeep
python/: CMakeLists.txt  pyedgefem.cpp  pyvectorem.cpp
python/edgefem/: __init__.py
python/edgefem/designs/: __init__.py  patch_antenna.py  stacked_patch.py  unit_cell.py  waveguide.py
python/edgefem/plots/: __init__.py  fields.py  patterns.py  sparams.py
python/tests/: test_patch_design.py  test_stacked_patch.py  test_unit_cell_design.py  test_validation_suite.py  test_waveguide_design.py
python/vectorem/: __init__.py
python/vectorem/designs/: __init__.py  patch_antenna.py  unit_cell.py  waveguide.py
python/vectorem/plots/: __init__.py  coupling.py
scripts/: plot_publication_figures.py  run_convergence_study.py
simulations/: test_fields.vtk  test_fields.vtu  wr90_highlevel.s2p
simulations/test_array/: run_simulation.py  unit_cell.geo  unit_cell.msh
simulations/test_dipole/: dipole.geo  dipole.msh  run_simulation.py
simulations/test_wg_sim/: run_simulation.py  waveguide.geo  waveguide.msh
src/: CMakeLists.txt  assemble_maxwell.cpp  bc.cpp  coupling.cpp  edge_basis.cpp  fem_scalar.cpp  main_scalar_demo.cpp  mesh_gmsh.cpp  mesh_quality.cpp  periodic.cpp  scalar_demo.cpp  solver.cpp  sweep.cpp  sweep_demo.cpp  waveguide_demo.cpp
src/array/: active_impedance.cpp  coupling_extract.cpp  embedded_pattern.cpp
src/io/: array_export.cpp  json_export.cpp  touchstone.cpp  vtk_export.cpp
src/materials/: dispersive.cpp
src/mor/: vector_fit.cpp
src/ports/: lumped_port.cpp  port_eigensolve.cpp  wave_port.cpp
src/post/: huygens_surface.cpp  ntf.cpp
tests/: CMakeLists.txt  benchmark_2d_waveguide.cpp  benchmark_wr90.cpp  debug_3d_mode_structure.cpp  debug_3d_vs_2d_pattern.cpp  debug_fem_core.cpp  debug_matrix_cond.cpp  debug_mode_alignment.cpp  debug_port_coupling.cpp  debug_port_normals.cpp  debug_port_weights.cpp  debug_solution_structure.cpp  debug_waveguide.cpp  python_smoke.py  test_2d_port_eigensolve.cpp  test_3d_eigenvector_excitation.cpp  test_abc.cpp  test_abc_scaling_sweep.cpp  test_cavity_eigenmodes.cpp  test_coax_waveguide.cpp  test_coupling.cpp  test_dielectric_slab_fresnel.cpp  test_direct_mode_excitation.cpp  test_direct_mode_tuning.cpp  test_dispersive_materials.cpp  test_edge_indexing.cpp  test_eigenmode_sparams.cpp  test_eigenvector_waveport.cpp  test_flipped_port.cpp  test_frequency_sweep.cpp  test_huygens_surface.cpp  test_lumped_port.cpp  test_maxwell.cpp  test_mesh_convergence.cpp  test_mesh_quality.cpp  test_normalized_ports.cpp  test_ntf.cpp  test_periodic.cpp  test_pml.cpp  test_ports.cpp  (+12 more)
tools/: __init__.py  lint.sh  new_simulation.py  plot_pattern.py  requirements.txt
tools/agents/: mesh_qa.py
tools/codex/: tasks.md
tools/geometry/: __init__.py  generators.py
tutorials/: 01_rectangular_waveguide.ipynb  02_patch_antenna.ipynb  03_unit_cell.ipynb  04_phased_array.ipynb
vectorem_cad/: __init__.py  cli.py
vectorem_cad/export/: vectorem_case.py
vectorem_cad/io/: step_iges.py
vectorem_cad/ops/: tagging.py
vectorem_cad/sdk/: __init__.py  project.py
vectorem_cad/viz/: preview.py
